app/public/stylesheets/sass/_components/_user.scss
.user {
    padding: 10px 0 0;
    overflow: hidden;
}

.user_thumb {
    width: 30px;
    height: 30px;
    display: block;
    border-radius: 50px;
    float: left;
    cursor: pointer;
    -webkit-user-drag: none;
}

.user_inner {
    float: left;
    margin: 0 0 0 20px;
}

.user_name,
.user_logOut {
    font-weight: normal;
    display: block;
}

.user_name {
    font-size: 12px;
    color: #fff;
}

.user_logOut {
    font-size: 10px;
}

.user_info {
    margin: 10px 0 0;
    font-size: 13px;
}

.user_info_wrap {
    display: inline-block;
    margin: 0 4px;

    &:hover {
        color: #fff;
    }

    & small,
    & strong {
        cursor: pointer;
        display: block;
    }
}

